--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -31,4 +31,7 @@
   <ItemGroup>
     <Compile Remove="Intrinsic\SuppressStackFrame.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Transform\Auto\Shrink\" />
+  </ItemGroup>
 </Project>
