--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -17,4 +17,7 @@
     <RuntimeMetadataVersion>v4.0.30319</RuntimeMetadataVersion>
     <AssemblyVersion>5.0.0.0</AssemblyVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="System.Runtime.Intrinsics\" />
+  </ItemGroup>
 </Project>
