--- a/Source/.editorconfig
+++ b/Source/.editorconfig
@@ -19,6 +19,11 @@ dotnet_style_prefer_compound_assignment = true
 dotnet_style_coalesce_expression = true
 dotnet_style_prefer_simplified_interpolation = true
 dotnet_diagnostic.CS0168.severity = none
+csharp_style_var_for_built_in_types = true
+csharp_style_var_when_type_is_apparent = true
+
+csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
+
 file_header_template = Copyright (c) MOSA Project. Licensed under the New BSD License.
 
 [*.csproj]
