--- a/Source/Mosa.Demo.SVGAWorld.x86/Mosa.Demo.SVGAWorld.x86.csproj
+++ b/Source/Mosa.Demo.SVGAWorld.x86/Mosa.Demo.SVGAWorld.x86.csproj
@@ -28,4 +28,12 @@
 		<ProjectReference Include="..\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj" />
 		<ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="Include\font.bin">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Include\font2.bin">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 </Project>
