--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -30,4 +30,8 @@
   <ItemGroup>
     <Compile Remove="Intrinsic\SuppressStackFrame.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Transforms\Optimizations\Auto\Ordering\" />
+    <Folder Include="Transforms\Optimizations\Manual\Simplification\" />
+  </ItemGroup>
 </Project>
