--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -33,5 +33,6 @@
   <ItemGroup>
     <Folder Include="Transforms\Optimizations\Auto\Ordering\" />
     <Folder Include="Transforms\Optimizations\Manual\Simplification\" />
+    <Folder Include="Transforms\Special\" />
   </ItemGroup>
 </Project>
