--- a/Source/Mosa.Compiler.MosaTypeSystem.CLR/Mosa.Compiler.MosaTypeSystem.CLR.csproj
+++ b/Source/Mosa.Compiler.MosaTypeSystem.CLR/Mosa.Compiler.MosaTypeSystem.CLR.csproj
@@ -7,6 +7,7 @@
 		<Nullable>enable</Nullable>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<WarningsAsErrors>Nullable</WarningsAsErrors>
 		</PropertyGroup>
 
 		<ItemGroup>
