Add new CLR project to tools NuGet package

--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -20,11 +20,12 @@
 	</metadata>
 	<files>
 		<file src="..\Art\Mosa Icon.png" target="images\" />
-		<file src="..\..\bin\runtimes\**\*.*" target="tools/runtimes" /> 
+		<file src="..\..\bin\runtimes\**\*.*" target="tools/runtimes" />
 		<file src="..\..\bin\Avalonia*.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Compiler.Common.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Compiler.Framework.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.CLR.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.ARMv8A32.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.x86.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.x64.dll" target="tools" />
