--- a/Source/Mosa.Tool.Launcher.Console/Properties/launchSettings.json
+++ b/Source/Mosa.Tool.Launcher.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Mosa.Tool.Launcher.Console": {
       "commandName": "Project",
-      "commandLineArgs": "Mosa.Demo.HelloWorld.x86.dll -display -s Launcher.Test=true",
+      "commandLineArgs": "-autostart -output-map -output-asm -inline-off -output-debug -output-hash Mosa.Demo.TestWorld.x86.dll",
       "workingDirectory": "X:\\MOSA-Project-tgiphil\\bin"
     }
   }
