--- a/Source/Mosa.Templates/templates/Mosa.Starter.x86/Properties/launchSettings.json
+++ b/Source/Mosa.Templates/templates/Mosa.Starter.x86/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 {
 	"profiles": {
-		"$safeprojectname$": {
+		"Mosa.Starter.x86": {
 			"commandName": "Executable",
 			"executablePath": "C:\\Program Files (x86)\\MOSA-Project\\bin\\Mosa.Tool.Launcher.exe",
-			"commandLineArgs": "$safeprojectname$.dll",
+			"commandLineArgs": "Mosa.Starter.x86.dll",
 			"workingDirectory": "bin"
 		}
 	}
