--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -29,11 +29,10 @@
 		<file src="..\..\bin\Mosa.Platform.ARMv8A32.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.x86.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.x64.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Explorer.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Debugger.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Launcher.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Compiler.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Launcher.Console.exe" target="tools" />
+		<file src="..\..\bin\Mosa.Tool.Explorer.*" target="tools" />
+		<file src="..\..\bin\Mosa.Tool.Debugger.*" target="tools" />
+		<file src="..\..\bin\Mosa.Tool.Launcher.*" target="tools" />
+		<file src="..\..\bin\Mosa.Tool.Compiler.*" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.Configuration.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.DebugEngine.dll" target="tools" />
@@ -49,5 +48,8 @@
 		<file src="..\..\bin\PriorityQueue.dll" target="tools" />
 		<file src="..\..\bin\WinFormsUI.dll" target="tools" />
 		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="tools" />
+		<file src="..\..\bin\System.Reactive.dll" target="tools" />
+		<file src="..\..\bin\SkiaSharp.dll" target="tools" />
+		<file src="..\..\bin\HarfBuzzSharp.dll" target="tools" />
 	</files>
 </package>
