--- a/Source/Mosa.Packages/Mosa.Korlib.nuspec
+++ b/Source/Mosa.Packages/Mosa.Korlib.nuspec
@@ -8,7 +8,7 @@
 		<owners>MOSA Project</owners>
 		<license type="expression">BSD-3-Clause-Clear</license>
 		<projectUrl>http://www.mosa-project.org</projectUrl>
-		<icon>images\Mosa Icon.png</icon>
+		<icon>images/Mosa Icon.png</icon>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>MOSA Corlib</summary>
 		<description>MOSA implementation of corlib</description>
@@ -17,8 +17,8 @@
 		<tags>MOSA Compiler corlib</tags>
 	</metadata>
 	<files>
-		<file src="..\Art\Mosa Icon.png" target="images\" />
-		<file src="..\..\bin\System.Runtime.dll" target="lib\net5.0" />
-		<file src="..\..\bin\Mosa.Plug.Korlib.dll" target="lib\net5.0" />
+		<file src="..\Art\Mosa Icon.png" target="images" />
+		<file src="..\..\bin\System.Runtime.dll" target="lib\net7.0" />
+		<file src="..\..\bin\Mosa.Plug.Korlib.dll" target="lib\net7.0" />
 	</files>
 </package>
